2011-04-08  Nicola Pero  <nicola.pero@meta-innovation.com>

	* GNUmakefile (SUBPROJECTS): Added Tests, so that 'make check'
	top-level does run the tests.
	* Tests/GNUmakefile: Use rules.make instead of test-tool.make.
	(TEST_TOOL_NAMES): Variable removed.

2011-03-31 Riccardo Mottola <rm@gnu.org>

	* Source/NSWorkspace.m
	Redefine statfs only for netbsd >= 3

2011-03-30 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSTableView.h,
	* Headers/AppKit/NSOutlineView.h,
	* Source/NSOutlineView.m
	(-namesOfPromisedFilesDroppedAtDestination:): Correct declaration
	of data source methods and the implementation in NSOutlineView.

2011-03-29 Riccardo Mottola <rm@gnu.org>

	* Source/NSParagraphStyle.m
	* Source/NSMatrix.m
	Added missing import.

2011-03-29 German Arias <german@xelalug.org>

	* Source/NSApplication.m (-hide:): Minimize all windows if
	the AppIcon is suppressed.

2011-03-29  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTextStorage.m:
	Use pointer sized integers in union for 64bit safety.

2011-03-28 Fred Kiefer <FredKiefer@gmx.de>

	* Tests/gui/NSSavePanel/setDelegate_reload.m: Switch the save
	panel to show hidden files as this is no longer the default.
	* Tests/gui/NSCell/basic.m: Basic create, coding and copy tests
	copied from base.

2011-03-28 Riccardo Mottola <rm@gnu.org>

	* Source/NSSearchFieldCell.m,
	* Source/NSTextView.m:
	Remove c99-ism

	* Source/NSSpeechSynthesizer.m:
	Add missing import

2011-03-25 German Arias <german@xelalug.org>

	* Panels/Spanish.lproj/GSDataLinkPanel.gorm:
	* Panels/Spanish.lproj/GSPageLayout.gorm:
	* Panels/Spanish.lproj/GSToolbarCustomizationPalette.gorm:
	* Panels/Spanish.lproj/GSPrintPanel.gorm:
	* Panels/Spanish.lproj/GSFindPanel.gorm: Tweak size of some
	elements for improve the presentation.

2011-03-19  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSPrintPanel.m:
	* Panels/Spanish.lproj/GSPrintPanel.gorm:
	* Panels/English.lproj/GSPrintPanel.gorm: Tweak the print panel to