@@ -434,7 +434,7 @@ container? necessary? */
 	  if (num_rects == rect_array_size)
 	    {
 	      rect_array_size += 4;
-	      rect_array = objc_realloc(rect_array, sizeof(NSRect) * rect_array_size);
+	      rect_array = realloc(rect_array, sizeof(NSRect) * rect_array_size);
 	    }
 	  rect_array[num_rects++] = r;
 	}
@@ -2476,12 +2476,12 @@ this file describes this.
 		}
 	      if (lf->points)
 		{
-		  objc_free(lf->points);
+		  free(lf->points);
 		  lf->points = NULL;
 		}
 	      if (lf->attachments)
 		{
-		  objc_free(lf->attachments);
+		  free(lf->attachments);
 		  lf->attachments = NULL;
 		}
 	    }
@@ -2596,12 +2596,12 @@ no_soft_invalidation:
 	    {
 	      if (lf->points)
 		{
-		  objc_free(lf->points);
+		  free(lf->points);
 		  lf->points = NULL;
 		}
 	      if (lf->attachments)
 		{
-		  objc_free(lf->attachments);
+		  free(lf->attachments);
 		  lf->attachments = NULL;
 		}
 	    }
