@@ -1,3 +1,13 @@
+2011-04-09 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/tiff.m,
+	* Source/NSLayoutManager.m: Replace objc_free and objc_realloc
+	with free and realloc.
+	* Source/NSToolbar.m [-_build]: Correct type cast.
+	* Source/GSTextFinder.m [-performFindPanelAction:withTextView:]:
+	Use correct format for NSInteger.
+	Fixes warnings reported by clang.
+
 2011-04-08  Nicola Pero  <nicola.pero@meta-innovation.com>
 
 	* GNUmakefile (SUBPROJECTS): Added Tests, so that 'make check'
